Fix rspec tests.

--- a/app/views/piwik_analytics/piwik_tracking_tag_async.html.erb
+++ b/app/views/piwik_analytics/piwik_tracking_tag_async.html.erb
@@ -5,7 +5,9 @@
     var u=(("https:" == document.location.protocol) ? "https://<%= url %>/" : "http://<%= url %>/");
     _paq.push(['setSiteId', <%= id_site %>]);
     _paq.push(['setTrackerUrl', u+'piwik.php']);
+    <% unless tracker.nil? %>
     <%= tracker.render(true) %>
+    <% end %>
     _paq.push(['trackPageView']);
     var d=document,
       g=d.createElement('script'),
