--- a/app/views/piwik_analytics/piwik_tracking_tag_async.html.erb
+++ b/app/views/piwik_analytics/piwik_tracking_tag_async.html.erb
@@ -8,9 +8,9 @@
   <% custom_variables.each do |var| %>
   _paq.push(['setCustomVariable',
   <%= var[:id] %>,
-  <%= var[:name] %>,
-  <%= var[:value] %>,
-  <%= var[:scope] %>
+  "<%= var[:name] %>",
+  "<%= var[:value] %>",
+  "<%= var[:scope] %>"
   <% end %>
   ]);
   _paq.push(['trackPageView']);
