--- a/app/views/piwik_analytics/piwik_tracking_tag_async.html.erb
+++ b/app/views/piwik_analytics/piwik_tracking_tag_async.html.erb
@@ -19,3 +19,6 @@
   })();
 </script>
 <!-- End Piwik Tag -->
+<!-- Piwik Image Tracker -->
+<img src="//<%= url %>/piwik.php?idsite=<%= id_site %>&amp;rec=1" style="border:0" alt="" />
+<!-- End Piwik -->
