Add Piwik image tracker to non-async code

--- a/app/views/piwik_analytics/piwik_tracking_tag.html.erb
+++ b/app/views/piwik_analytics/piwik_tracking_tag.html.erb
@@ -10,3 +10,6 @@
   } catch( err ) {}
 </script>
 <!-- End Piwik Tag -->
+<!-- Piwik Image Tracker -->
+<img src="//<%= url %>/piwik.php?idsite=<%= id_site %>&amp;rec=1" style="border:0" alt="" />
+<!-- End Piwik -->
