Add some DRYness to this snippet and fix the tests as needed afterwards.

--- a/app/views/piwik_analytics/piwik_tracking_tag.html.erb
+++ b/app/views/piwik_analytics/piwik_tracking_tag.html.erb
@@ -1,6 +1,6 @@
 <!-- Piwik -->
 <script type="text/javascript">
-  var pkBaseURL = (("https:" == document.location.protocol) ? "https://<%= url %>/" : "http://<%= url %>/");
+  var pkBaseURL = (("https:" == document.location.protocol) ? "https" : "http") + "://<%= url %>/";
   document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
   </script><script type="text/javascript">
   try {
