Put <img> tracker in <noscript> tag where it belongs

--- a/app/views/piwik_analytics/piwik_tracking_tag.html.erb
+++ b/app/views/piwik_analytics/piwik_tracking_tag.html.erb
@@ -11,5 +11,7 @@
 </script>
 <!-- End Piwik Tag -->
 <!-- Piwik Image Tracker -->
-<img src="//<%= url %>/piwik.php?idsite=<%= id_site %>&amp;rec=1" style="border:0" alt="" />
+<noscript>
+  <p><img src="//<%= url %>/piwik.php?idsite=<%= id_site %>&amp;rec=1" style="border:0" alt="" /></p>
+</noscript>
 <!-- End Piwik -->
