Add Ghostery-dodging javascript code
- Ghostery ignores the <noscript> part
-> Implemented js solution given here : http://forum.piwik.org/read.php?2,87735,page=1

--- a/app/views/piwik_analytics/piwik_tracking_tag.html.erb
+++ b/app/views/piwik_analytics/piwik_tracking_tag.html.erb
@@ -7,7 +7,13 @@
     var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", <%= id_site %>);
     piwikTracker.trackPageView();
     piwikTracker.enableLinkTracking();
-  } catch( err ) {}
+  } catch( err ) {
+      (function() {
+        var img = document.createElement('img');
+        img.src = "//<%= url %>/piwik.php?idsite=<%= id_site %>&rec=1";
+        document.body.appendChild(img);
+    })();
+  }
 </script>
 <!-- End Piwik Tag -->
 <!-- Piwik Image Tracker -->
