--- a/app/views/piwik_analytics/piwik_tracking_tag.html.erb
+++ b/app/views/piwik_analytics/piwik_tracking_tag.html.erb
@@ -1,15 +1,18 @@
 <!-- Piwik -->
 <script type="text/javascript">
-  var pkBaseURL = (("https:" == document.location.protocol) ? "https" : "http") + "://<%= url %>/";
-  document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-  </script><script type="text/javascript">
-  try {
-    var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", <%= id_site %>);
-    piwikTracker.trackPageView();
-    piwikTracker.enableLinkTracking();
-  } catch( err ) {}
+  var _paq = _paq || [];
+  // tracker methods like "setCustomDimension" should be called before "trackPageView"
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//<%= url %>/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', <%= id_site %>]);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
 </script>
-<!-- End Piwik Tag -->
+<!-- End Piwik Code -->
 <!-- Piwik Image Tracker -->
 <noscript>
   <p><img src="//<%= url %>/piwik.php?idsite=<%= id_site %>&amp;rec=1" style="border:0" alt="" /></p>
